# chrome-compressor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: hashutil.py  paths.py  settings.py
app/models/: job.py
app/services/: app_ctx.py  job_runner.py  theme.py  workers.py
app/ui/: __init__.py  main_window.py
app/web/: cyto.html  echart.html  proof.html
docs/: desktop.md
docs/adr/: 0001-theme-management-and-dark-mode.md
notebooks/: 00_alphabet_demo.ipynb  01_corpus_demo.ipynb  02_entropy_demo.ipynb  03_ppm_demo.ipynb  04_huffman_redundancy_demo.ipynb  05_validation_demo.ipynb  06_proof_generation_demo.ipynb
reducelang/: __init__.py  alphabet.py  cli.py  config.py  huffman.py  redundancy.py  report.py  utils.py
reducelang/coding/: __init__.py  arithmetic.py
reducelang/commands/: __init__.py  estimate.py  huffman.py  prep.py  report.py
reducelang/corpus/: __init__.py  datacard.py  downloader.py  extractors.py  preprocessor.py  registry.py
reducelang/models/: __init__.py  base.py  ngram.py  ppm.py  unigram.py
reducelang/proofs/: __init__.py  generator.py  renderer.py
tests/: test_alphabet.py  test_arithmetic_coder.py  test_bootstrap.py  test_cli_estimate.py  test_cli_huffman.py  test_cli_prep.py  test_cli_report.py  test_config.py  test_datacard.py  test_downloader.py  test_extractors.py  test_huffman_model.py  test_ngram_model.py  test_ppm_model.py  test_preprocessor.py  test_proof_generator.py  test_proof_renderer.py  test_redundancy.py  test_report.py  test_sensitivity.py  test_unigram_model.py
(+19 files in other folders)
